# amani

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  MCP_GAMEDEV_GUIDE.md  README.md  SETUP.md  build-and-deploy.sh  vercel.json
scenario-mcp/: .env  .env.example  .mcp.json  CLAUDE.md  MCP_STATUS.md  README.md  SETUP_INSTRUCTIONS.md  deploy-global-mcp.sh  fix_imports.py  generate_flappy_wings_samples.py  generate_saqr_art_samples.py  generate_saqr_samples.py  generate_with_scenario.py  install.sh  move-to-dev.sh  pyproject.toml  run_server.sh  scenario_ai_direct.py  setup-global-mcp.sh  simple_sample_test.py  test_api.py  test_basic.py  test_mcp_integration.py  verify-global-mcp.sh
scenario-mcp/agents/: verified_art_direction_agent.py
scenario-mcp/agents/base/: art_direction_base.py  asset_generator_base.py
scenario-mcp/agents/configs/: project_manager.py  unity_asset_specifications.json
scenario-mcp/core/: advanced_unity_scenario_client.py  enhanced_scenario_client.py  model_manager.py
scenario-mcp/integrations/: __init__.py  unity_integration_commands.py
scenario-mcp/src/: __init__.py  config.py  exceptions.py  minimal_mcp_server.py  scenario_client.py  server.py  simple_server.py  working_server.py
scenario-mcp/src/models/: __init__.py  enums.py  requests.py  responses.py
scenario-mcp/src/tools/: __init__.py  asset_management.py  batch_operations.py  controlnet.py  image_to_image.py  model_management.py  text_to_image.py  threed_generation.py  video_generation.py
scenario-mcp/test/: UNITY_OPTIMIZED_ASSET_GENERATION_PLAN.md
test/: debug_scenario.py  (+37 more)
(+25 files in other folders)
